--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,101 @@
+input[type="text"],
+input[type="password"] {
+  height: 20px;
+  border: 2px solid rgba(0, 0, 0, 0.2);
+  padding: 6px;
+  
+}
+
+label {
+  width : 100px;
+  display: inline-block;
+  font-size: 20px;
+  margin: 10px;
+}
+
+input[type="submit"] {
+  margin-top: 10px;
+  cursor: pointer;
+  font-size: 15px;
+  background: #01d28e;
+  border: 1px solid #01d28e;
+  color: #fff;
+  padding: 10px 20px;
+  margin : 20px;
+}
+
 .App {
   text-align: center;
-}
-
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
-}
-
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
+  font-family: Cambria, Cochin, Georgia, Times, 'Times New Roman', serif;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  flex-direction: column;
+  height: 100vh;
+  font-family: Cambria, Cochin, Georgia, Times, 'Times New Roman', serif;
+  background-image: linear-gradient(rgb(173, 188, 230), grey);
 }
 
 .App-header {
-  background-color: #282c34;
-  min-height: 100vh;
   display: flex;
-  flex-direction: column;
+  flex-direction: row;
   align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
+  justify-content: top;
+  font-size: 30px;
+  color: rgb(20, 13, 13);
 }
 
 .App-link {
   color: #61dafb;
 }
 
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
+.centerbox{
+  background-color: #DDDDDD;
+  box-sizing: border-box;
+  width: 300px;
+  padding: 30px;
+  border: 10px solid #00c3ffb6;
+  margin: 10px;
   }
-  to {
-    transform: rotate(360deg);
-  }
+
+.centerbox1 {
+  top: 10%;
+  left:50%;
+  bottom: 20%;
+  background-color: #fff;
+  width : 25%;
+  height : 35%;
+  padding: 40px;
+}
+
+button {
+  display: inline-block;
+  background-color: #4838d8;
+  border-radius: 8px;
+  border: 4px double #cccccc;
+  color: #eeeeee;
+  text-align: center;
+  font-size: 20px;
+  padding: 7px;
+  width: 100px;
+  -webkit-transition: all 0.5s;
+  -moz-transition: all 0.5s;
+  -o-transition: all 0.5s;
+  transition: all 0.5s;
+  cursor: pointer;
+  margin: 10px;
+}
+
+button:hover {
+  background-color: green;
+}
+
+.button-link {
+  background: none;
+  border: none;
+  padding: 0;
+  color: #069;
+  text-decoration: underline;
+  cursor: pointer;
+  font-size: 12px;
 }
